[package]
name = "ssb-validate"
version = "1.0.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.8.0"
snafu = "0.6.0"
ssb-legacy-msg-data = { git="https://github.com/sunrise-choir/legacy-msg-data", version = "0.1.1" }
ssb-multiformats = "0.4.0" 
rayon = "1.2.0"

[dev-dependencies]
criterion = "0.3"
flumedb = "0.1.3"

[[bench]]
name = "bench"
harness = false
